--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <html lang="pt-BR">
+
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>Brunomusicflix</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>BRUNOMUSICFLIX</header>
 
-    <section>
-        <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-            <p>#homem-aranha</p>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>NOTHING ELSE MATTERS</h1>
+            <p>#metallica</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lli99OmkPwM?si=XKuBiYWeFl79N-AI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section class="categoria">
+        <h2>Musicas e clipes</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=PLIAp5nr0q0">
+                <img src="https://img.youtube.com/vi/PLIAp5nr0q0/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=CSvFpBOe8eY">
+                <img src="https://img.youtube.com/vi/CSvFpBOe8eY/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=fregObNcHC8">
+                <img src="https://img.youtube.com/vi/fregObNcHC8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">
+                <img src="https://img.youtube.com/vi/RB-RcX5DS5A/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=j5PJe2L81wg">
+                <img src="https://img.youtube.com/vi/j5PJe2L81wg/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
 
