--- a/index.html
+++ b/index.html
@@ -1,50 +1,25 @@
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <title>Brunomusicflix</title>
+    <title>Brunoflix</title>
 </head>
 
 <body>
-    <header>BRUNOMUSICFLIX</header>
 
-    <section class="chamada">
-        <div class="chamada-texto">
-            <h1>NOTHING ELSE MATTERS</h1>
-            <p>#metallica</p>
+    <header>BRUNOFLIX</header>
+
+    <section>
+        <div>
+            <h1>SPIDEY E SEUS AMIGOS ESPETACULARES</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lli99OmkPwM?si=XKuBiYWeFl79N-AI"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_XXqhIVtS0w?si=t8mOV1koJBR4gRI4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <section class="categoria">
-        <h2>Musicas e clipes</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=PLIAp5nr0q0">
-                <img src="https://img.youtube.com/vi/PLIAp5nr0q0/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=CSvFpBOe8eY">
-                <img src="https://img.youtube.com/vi/CSvFpBOe8eY/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=fregObNcHC8">
-                <img src="https://img.youtube.com/vi/fregObNcHC8/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">
-                <img src="https://img.youtube.com/vi/RB-RcX5DS5A/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=j5PJe2L81wg">
-                <img src="https://img.youtube.com/vi/j5PJe2L81wg/maxresdefault.jpg" />
-            </a>
         </div>
     </section>
 
