--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
                 <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
-                <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=_Iot_XdsLcc">
+                <img src="https://img.youtube.com/vi/_Iot_XdsLcc/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
-                <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=VEoyWZ5sxoY">
+                <img src="https://img.youtube.com/vi/VEoyWZ5sxoY/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
-                <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=I3fUI_Wo-QY">
+                <img src="https://img.youtube.com/vi/I3fUI_Wo-QY/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
-                <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=7_FEdXAl4O4">
+                <img src="https://img.youtube.com/vi/7_FEdXAl4O4/maxresdefault.jpg">
             </a>
         </div>
     </section>
