--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>BRUNOFLIX</header>
 
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>SPIDEY E SEUS AMIGOS ESPETACULARES</h1>
             <p>#homem-aranha</p>
@@ -28,9 +28,9 @@
         </div>
     </section>
 
-    <section>
+    <section class="categoria">
         <h2>Animações e Desenhos</h2>
-        <div>
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
                 <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
             </a>
