--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/_XXqhIVtS0w?si=1CdRlEro-Sv5Cj34"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_XXqhIVtS0w?si=z6byAEhHgWavsNCI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -31,24 +31,24 @@
     <section class="categoria">
         <h2>Animações e Desenhos</h2>
         <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=eRTQ3vt7JS8">
+                <img src="https://img.youtube.com/vi/eRTQ3vt7JS8/maxresdefault.jpg">
+            </a>
             <a href="https://www.youtube.com/watch?v=xq3Cz8faMD8">
                 <img src="https://img.youtube.com/vi/xq3Cz8faMD8/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=_Iot_XdsLcc">
-                <img src="https://img.youtube.com/vi/_Iot_XdsLcc/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=w1ZelQSRH7A">
+                <img src="https://img.youtube.com/vi/w1ZelQSRH7A/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=VEoyWZ5sxoY">
-                <img src="https://img.youtube.com/vi/VEoyWZ5sxoY/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=fn0vMWDYMV4">
+                <img src="https://img.youtube.com/vi/fn0vMWDYMV4/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=I3fUI_Wo-QY">
-                <img src="https://img.youtube.com/vi/I3fUI_Wo-QY/maxresdefault.jpg">
-            </a>
-            <a href="https://www.youtube.com/watch?v=7_FEdXAl4O4">
-                <img src="https://img.youtube.com/vi/7_FEdXAl4O4/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=x7gonAtXAN8">
+                <img src="https://img.youtube.com/vi/x7gonAtXAN8/maxresdefault.jpg">
             </a>
         </div>
-    </section>
 
+    </section>
 
 </body>
 
